bk_ida/gccida/c2/unroll_loop
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/unroll_loop/src/unroll.c:711:4: error: expected ';' after expression
rtx v16; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/unroll_loop/src/unroll.c:711:5: error: use of undeclared identifier 'v16'
rtx v16; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/unroll_loop/src/unroll.c:713:4: error: expected ';' after expression
rtx v18; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/unroll_loop/src/unroll.c:713:5: error: use of undeclared identifier 'v18'
rtx v18; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/unroll_loop/src/unroll.c:731:4: error: expected ';' after expression
rtx rtwint; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/unroll_loop/src/unroll.c:731:5: error: use of undeclared identifier 'rtwint'; did you mean 'rewind'?
rtx rtwint; // rdx 
    ^~~~~~
    rewind
/usr/include/stdio.h:694:13: note: 'rewind' declared here
extern void rewind (FILE *__stream);
            ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/unroll_loop/src/unroll.c:739:6: error: use of undeclared identifier 'fld'
rtx *fld; // rcx 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/unroll_loop/src/unroll.c:747:4: error: expected ';' after expression
rtx v52; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/unroll_loop/src/unroll.c:747:5: error: use of undeclared identifier 'v52'
rtx v52; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/unroll_loop/src/unroll.c:759:4: error: expected ';' after expression
rtx reg_note; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/unroll_loop/src/unroll.c:759:5: error: must use 'enum' tag to refer to type 'reg_note'
rtx reg_note; // rax 
    ^
    enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/unroll_loop/src/unroll.c:791:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v96; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/unroll_loop/src/unroll.c:792:4: error: expected ';' after expression
rtx v97; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/unroll_loop/src/unroll.c:792:5: error: use of undeclared identifier 'v97'
rtx v97; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/unroll_loop/src/unroll.c:796:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v101; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/unroll_loop/src/unroll.c:797:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v102; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/unroll_loop/src/unroll.c:799:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v104; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/unroll_loop/src/unroll.c:801:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v106; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/unroll_loop/src/unroll.c:803:4: error: expected ';' after expression
rtx v108; // rax 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/unroll_loop/src/obj/unroll.o] Error 1
